# ppp

./: .env.example  .gitignore  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 3cde1528bd27_create_books_table.py
src/library_catalog/: main.py
src/library_catalog/api/: dependencies.py
src/library_catalog/api/v1/routers/: books.py  health.py
src/library_catalog/api/v1/schemas/: book.py  common.py
src/library_catalog/core/: config.py  database.py  exceptions.py  logging_config.py
src/library_catalog/data/models/: book.py
src/library_catalog/data/repositories/: base_repository.py  book_repository.py
src/library_catalog/domain/: exceptions.py
src/library_catalog/domain/mappers/: book_mapper.py
src/library_catalog/domain/services/: book_service.py
